Added view icon to overlay

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         src="./images/image-equilibrium.jpg"
         alt="image-equilibrium"
       />
-      <div class="overlay"></div>
+      <div class="overlay">
+        <img class="icon-view" src="./images/icon-view.svg" alt="icon-view"/>
+      </div>
     </div>
      
       <h3>Equilibrium #3429</h3>
